# binance-bot

./: .gitignore  Cargo.toml
examples/: cifar.rs  conv.rs  ds.rs  duration.rs  env.rs  ppo.rs  rust.rs  surreal.rs  tick.rs  vec.rs  ws.rs
src/: agent.rs  candlestick.rs  coach.bkp  coach.rs  conv.rs  dataset.rs  db.rs  downloader.rs  environment.rs  lib.rs  main.rs  nn.rs  surreal.rs  utils.rs  ws.rs
src/agent/: consts.rs  dfdx.rs  memory.rs
src/agent/conv/: a2c.rs  dqn.rs  memory.rs  mod.rs  models.rs
src/agent/dfdx/: a2c.rs  dqn.rs  ppo.rs
src/agent/dfdx/ppo/: memory.rs
