[package]
name = "binance-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "downloader"
path = "./src/downloader.rs"

[[bin]]
name = "main"
path = "./src/main.rs"

[lib]
name = "binance"
path = "./src/lib.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.2"
yata = "0.6"

dfdx = "*"
rand={version = "*"}
