[package]
name = "binance-data"
version = "0.1.0"
authors = ["Aleksandr Lykhouzov<lykhouzov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "downloader"
path = "./src/downloader.rs"

[[bin]]
name = "coach"
path = "./src/coach.rs"

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "surreal"
path = "./src/surreal.rs"

[[bin]]
name = "conv"
path = "./src/conv.rs"


[lib]
name = "binance"
path = "./src/lib.rs"

[features]
default = ["dfdx/nightly"]

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.2"
fastrand = "*"

dfdx = { version = "*", features = ["cuda", "numpy", "nightly"] }
# rand = { version = "*" }
plotters = "0.3"
image = { version = "0.24.6", default-features = false, features = ["png"] }
log = "*"
env_logger = "*"
dotenv = "*"
# time = { version = "0.3", features = ["serde", "parsing", "macros"] }
chrono = { version = "0.4.24", features = ["serde", "time"] }
clap = { version = "4.2", features = ["derive"] }
log4rs = "1"
rayon = "1.7"

[dependencies.yata]
version = "0.6"
features = [
    "period_type_u64",
    # , "value_type_f32"
]


[dependencies.surrealdb]
git = "https://github.com/surrealdb/surrealdb.git"
tag = "v1.0.0-beta.9+20230402"
features = ['protocol-http', 'kv-mem', 'kv-rocksdb']
optional = true
